tests/invalid_inputs/sema/int_arr_to_double_ptr.cpp

int main() {
	int arr[5];
	double *p = arr;
}
